Add structured conclusions to Solo EDA notebook
Summarized stability filtering, distributional properties, correlation structure, and methodological justification for PCA-based dimensionality reduction.

--- a/notebooks/01_solo_eda.ipynb
+++ b/notebooks/01_solo_eda.ipynb
@@ -546,6 +546,26 @@
     "The next step is dimensionality reduction in the standardized feature space."
    ],
    "id": "a1e6648caa51ce57"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 9. Conclusions\n",
+    "\n",
+    "1. After applying the stability threshold (Solo matches ≥ 50), the dataset retains 1433 players, providing sufficient statistical power for structural analysis.\n",
+    "\n",
+    "2. Relative behavioral metrics (kills per match, minutes per match, win rate) successfully eliminate raw volume effects and isolate gameplay tendencies.\n",
+    "\n",
+    "3. Distributional analysis reveals right-skewed behavior in combat-related metrics, particularly Solo kd and Solo win rate, which is consistent with skill heterogeneity in competitive environments.\n",
+    "\n",
+    "4. Extreme values correspond to realistic high-skill players and do not represent data errors. Therefore, no aggressive outlier removal is applied.\n",
+    "\n",
+    "5. Correlation analysis indicates moderate dependence between behavioral variables, justifying the application of dimensionality reduction techniques.\n",
+    "\n",
+    "The dataset is structurally prepared for PCA-based latent behavior modeling."
+   ],
+   "id": "72846d526a443d79"
   }
  ],
  "metadata": {
