Refactor Solo clustering notebook with structured interpretation and formal conclusions

--- a/notebooks/03_solo_clustering.ipynb
+++ b/notebooks/03_solo_clustering.ipynb
@@ -10,24 +10,23 @@
     "\n",
     "### 1. Objective\n",
     "\n",
-    "The goal of this notebook is to determine whether distinct behavioral archetypes\n",
-    "exist within the reduced Solo feature space.\n",
+    "The objective of this analysis is to determine whether distinct behavioral archetypes\n",
+    "exist within the reduced Solo feature space derived from PCA.\n",
     "\n",
-    "We aim to:\n",
+    "Specifically, we aim to:\n",
     "\n",
-    "1. Use PCA-transformed coordinates\n",
-    "2. Apply KMeans clustering\n",
-    "3. Determine optimal cluster number\n",
-    "4. Interpret behavioral archetypes\n",
-    "5. Evaluate whether skill is discrete or continuous"
+    "1. Cluster players in the (PC1, PC2) space\n",
+    "2. Determine the optimal number of clusters\n",
+    "3. Interpret behavioral differences between clusters\n",
+    "4. Evaluate whether skill is continuous or segmented"
    ],
    "id": "3b19b2865c95ae3c"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-27T18:51:30.865453Z",
-     "start_time": "2026-02-27T18:51:29.842585100Z"
+     "end_time": "2026-02-28T19:54:24.191283600Z",
+     "start_time": "2026-02-28T19:54:23.145761900Z"
     }
    },
    "cell_type": "code",
@@ -60,8 +59,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-27T18:51:30.904283500Z",
-     "start_time": "2026-02-27T18:51:30.867452200Z"
+     "end_time": "2026-02-28T19:54:24.224669700Z",
+     "start_time": "2026-02-28T19:54:24.193786800Z"
     }
    },
    "cell_type": "code",
@@ -91,8 +90,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-27T18:51:32.647102500Z",
-     "start_time": "2026-02-27T18:51:30.905283900Z"
+     "end_time": "2026-02-28T19:54:26.073837500Z",
+     "start_time": "2026-02-28T19:54:24.225669800Z"
     }
    },
    "cell_type": "code",
@@ -152,19 +151,26 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### 2. Cluster Number Selection\n",
+    "### 2. Optimal Number of Clusters\n",
     "\n",
-    "Silhouette score evaluates cluster compactness and separation.\n",
+    "Silhouette score measures how well-separated clusters are.\n",
     "\n",
-    "The optimal k maximizes the silhouette score."
+    "Results indicate:\n",
+    "\n",
+    "1. The highest silhouette score occurs at k = 2.\n",
+    "2. However, k = 3 provides interpretable behavioral segmentation.\n",
+    "3. Additional clusters reduce separation quality.\n",
+    "\n",
+    "Although k = 2 maximizes compactness, k = 3 allows identification\n",
+    "of distinct gameplay archetypes without excessive overlap."
    ],
    "id": "836e78d3033224b1"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-27T18:51:32.718790900Z",
-     "start_time": "2026-02-27T18:51:32.697201Z"
+     "end_time": "2026-02-28T19:54:26.138503400Z",
+     "start_time": "2026-02-28T19:54:26.127187Z"
     }
    },
    "cell_type": "code",
@@ -179,8 +185,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-27T18:51:32.872037200Z",
-     "start_time": "2026-02-27T18:51:32.763854600Z"
+     "end_time": "2026-02-28T19:54:26.248657300Z",
+     "start_time": "2026-02-28T19:54:26.139507800Z"
     }
    },
    "cell_type": "code",
@@ -217,10 +223,26 @@
    "execution_count": 5
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 3. Visual Inspection of Cluster Structure\n",
+    "\n",
+    "The PCA space reveals:\n",
+    "\n",
+    "1. A clearly separated high-PC1 region (combat-dominant players).\n",
+    "2. A survival-oriented region characterized by high PC2.\n",
+    "3. A low-performance region with negative PC1 and PC2 values.\n",
+    "\n",
+    "Clusters appear geometrically meaningful rather than arbitrary partitions."
+   ],
+   "id": "27f16c5697021866"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-27T18:51:32.905461100Z",
-     "start_time": "2026-02-27T18:51:32.886560100Z"
+     "end_time": "2026-02-28T19:54:26.264165100Z",
+     "start_time": "2026-02-28T19:54:26.250160100Z"
     }
    },
    "cell_type": "code",
@@ -299,6 +321,53 @@
     }
    ],
    "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 4. Cluster Profiling\n",
+    "\n",
+    "Cluster-level averages indicate:\n",
+    "\n",
+    "1. Cluster 0\n",
+    "   - Low PC1 and low PC2\n",
+    "   - Lowest win rate\n",
+    "   - Represents low-skill or low-impact players\n",
+    "\n",
+    "2. Cluster 1\n",
+    "   - High PC1\n",
+    "   - Highest win rate\n",
+    "   - Represents combat-dominant players\n",
+    "\n",
+    "3. Cluster 2\n",
+    "   - Low PC1 but high PC2\n",
+    "   - Moderate win rate\n",
+    "   - Represents survival-oriented players\n",
+    "\n",
+    "The results suggest that player behavior is not purely continuous.\n",
+    "Instead, distinct behavioral patterns emerge within the population."
+   ],
+   "id": "69a47b77495d2070"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 5. Conclusions\n",
+    "\n",
+    "1. PCA-based clustering reveals meaningful behavioral segmentation in Solo mode.\n",
+    "2. A combat-dominant archetype clearly emerges and exhibits the highest win rate.\n",
+    "3. A survival-oriented archetype exists independently of combat dominance.\n",
+    "4. Low-performance players form a distinct cluster with consistently low success rates.\n",
+    "5. Although silhouette analysis suggests k = 2 as optimal, k = 3 provides richer behavioral interpretation.\n",
+    "\n",
+    "These findings indicate that Solo gameplay structure contains discrete behavioral archetypes\n",
+    "rather than a purely continuous skill gradient.\n",
+    "\n",
+    "The next step involves formalizing a Skill Index and quantifying its predictive power."
+   ],
+   "id": "18897edfff1e48f4"
   }
  ],
  "metadata": {
